--- a/Pet Adon.html
+++ b/Pet Adon.html
@@ -5,43 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Adone pet </title>
         <!-- <link rel="stylesheet" href="Adone pet.css"> -->
-        <style type="text/css">
-            .card{
-    width: 400px;
-    border: 2px solid black;
-    border-radius: 25px;
-    padding: 10px;
-    margin: 10px;
-}
-img{
-    width: 100%;
-    border-radius: 25px;
-}
-
-h2{
-    color: brown;
-}
-
-span{
-    color: burlywood;
-}
-
-h4{
-    text-align: right;
-    color: #3c787e;
-}
-
-#pet{
-    display: flex;
-    justify-content: space-evenly;
-}
- 
-@media (max-width: 412px){
-    #pet{
-        flex-wrap: wrap;
-    }
-}
-      </style>
+        <link rel="stylesheet" href="Adone pet.css">
     </head>
     <body>
         <h2><i>Ashish.com</i></h2>
