--- a/Pet Adon.html
+++ b/Pet Adon.html
@@ -5,7 +5,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Adone pet </title>
         <!-- <link rel="stylesheet" href="Adone pet.css"> -->
-        <link rel="stylesheet" href="Adone pet.css">
+        <link rel="stylesheet" href="Pet adon.css">
+
     </head>
     <body>
     
